@@ -1,6 +1,8 @@
 6.57_01
     Bug Fixes
     * Recognize .so files in AIX. [rt.cpan.org 41360] (Jens Rehsack)
+    * Remove manual image-base generation on Win32/gcc [rt.cpan.org 47138]
+      (Yasuhiro Matsumoto)
 
 
 6.56  Thu Dec 17 14:02:14 PST 2009
